# sociallab

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.bat  install.sh  main.cpp  misc.cpp  nginx_config.txt  pdf.cpp  pdf.h  run.sh  totp.cpp
export/: chat.html  friends.html  login.html  profile.html  register.html  users.html
templates/: chat.html  friends.html  index.html  login.html  my_profile.html  profile.html  register.html  users.html
