cmake_minimum_required(VERSION 3.2)
set (CMAKE_CXX_STANDARD 23)
project(social3)
add_executable(social3 main.cpp)

find_package(Crow CONFIG REQUIRED)
target_link_libraries(social3 PRIVATE Crow::Crow)
find_package(hiredis CONFIG REQUIRED)
target_link_libraries(social3 PRIVATE hiredis::hiredis)
find_package(redis++ CONFIG REQUIRED)
if(TARGET redis++::redis++_static)
    target_link_libraries(social3 PRIVATE redis++::redis++_static)
else()
    target_link_libraries(social3 PRIVATE redis++::redis++)
endif()
find_path(JWT_CPP_INCLUDE_DIRS "jwt-cpp/base.h")
target_include_directories(social3 PRIVATE ${JWT_CPP_INCLUDE_DIRS})
find_package(OpenSSL REQUIRED)
target_link_libraries(social3 PRIVATE OpenSSL::SSL OpenSSL::Crypto)
file(COPY templates DESTINATION ${CMAKE_BINARY_DIR})
file(COPY static DESTINATION ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 23)
